gateway/1.12/modules/ROOT/pages/policies-included-oauth-token-introspection.adoc
= OAuth 2.0 Token Introspection Policy
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:keywords: oauth, token, validation, introspection, policy
:page-aliases: policies::policies-included-oauth-token-introspection.adoc

[width="100%", cols="5,15"]
|===
>s| Policy Name | OAuth 2.0 Token Introspection Policy
>s|Summary      | Allows access only to authorized client applications
>s|Category | Security
>s| First Flex Gateway version available | v1.3.0
.4+>.^s| Returned Status Codes
|400 - Invalid token
|401 - Unauthorized access or error when connecting to the authorization server
|403 - Forbidden, invalid client application credentials
|500 - Bad response from authorization server, or WSDL SOAP fault error
|===

== Summary

The OAuth 2.0 Token Introspection policy enables you to configure OAuth 2.0 using any third-party Identify Provider (IdP), such as Okta, AWS, Azure or Google Cloud Platform. The policy allows for tokens based on the OAuth 2.0 Authorization Framework to be authorized without having to register an external IdP server in the Anypoint Platform.

The policy validates the token sent by the client to the protected API, and allows access to the backend server only if the introspection endpoint authorizes the token.

[NOTE]
====
OAuth Introspection Policy doesn't support Microsoft Entra ID because Microsoft Entra ID doesn't provide an introspection endpoint.
====

== Configuring Policy Parameters

include::partial$policy-title-headers.adoc[tag=configFile]

----
- policyRef:
    name: oauth2-token-introspection-flex
  config:
    introspectionURL: <string> // REQUIRED
    authorizationValue: <string> // REQUIRED
    validatedTokenTTL: <number> // OPTIONAL
    authenticationTimeout: <number> // OPTIONAL
    skipClientIdValidation: <boolean> // REQUIRED
    consumerBy: <string> // REQUIRED
    exposeHeaders: <boolean> // OPTIONAL
    scopes: <string> // OPTIONAL
    scopeValidationCriteria: <string> // OPTIONAL
    maxCacheEntries: <number> // OPTIONAL
    enableProtectedResourceMetadata: <boolean> // OPTIONAL
    overrideProtectedResourceMetadataAuthorizationServerUrl: <boolean> // OPTIONAL
    protectedResourceMetadataAuthorizationServerUrl: <string> // OPTIONAL
----

[%header%autowidth.spread,cols="a,a,a,a"]
|===
|Parameter | Required or Optional | Default Value | Description

| `introspectionURL`
| Required
|
| The third-party token introspection URL

| `authorizationValue`
| Required
|
| The method to request authorization from the authentication service. Specify either a Basic Auth string with `client_id` and `client_secret`, or a Bearer Token.

| `validatedTokenTTL`
| Optional
| 600
| The caching limit for the validated token

| `authenticationTimeout`
| Optional
| 10000
| The timeout when sending data to the authentication service

| `skipClientIdValidation`
| Required
| false
| Enables/disables client ID enforcement support

| `consumerBy`
| Required
|
| Associate an identity provider's `username` or `client_id` response with a registered platform's `client_id`. Required if `skip_client_id_validation`is `true`.

| `exposeHeaders`
| Optional
| false
|

| `scopes`
| Optional
| ""
| A space-delimited list

| `scopeValidationCriteria`
| Optional
| "AND"
| The criteria to apply to the `scopes` values. Valid parameter values are "AND" or "OR".

| `maxCacheEntries`
| Optional
| 1000
|

| `enableProtectedResourceMetadata`
| Optional
| false
| Enables https://www.rfc-editor.org/rfc/rfc9728[RFC 9728] OAuth 2.0 Protected Resource Metadata. When `true`, Flex Gateway serves `GET` requests to `/.well-known/oauth-protected-resource` at the API's base path; the request never reaches the upstream. All `401` responses include a `WWW-Authenticate` header with the `resource_metadata` URL so MCP clients can discover the endpoint.

| `overrideProtectedResourceMetadataAuthorizationServerUrl`
| Optional
| false
| By default, Flex Gateway derives the authorization server base URL from the introspection endpoint URL (for example, `https://auth.example.com/introspect` becomes `https://auth.example.com`). Set to `true` to supply a custom base URL instead (for example, when the authorization server uses a different path, such as Keycloak realms).

| `protectedResourceMetadataAuthorizationServerUrl`
| Optional
|
| Authorization server base URL to advertise in the protected resource metadata document (for example, `https://auth.example.com/realms/myrealm`). Required when `overrideProtectedResourceMetadataAuthorizationServerUrl` is `true`.

|===

==== Resource Configuration Example

[source,yaml]
----
- policyRef:
    name: oauth2-token-introspection-flex
  config:
    introspectionURL: https://my-introspection.com/introspect
    authorizationValue: Basic am9obkBleGFtcGxlLmNvbTphYmMxMjM=
    validatedTokenTTL: 600
    authenticationTimeout: 10000
    skipClientIdValidation: false
    consumerBy: "client_id"
    exposeHeaders: true
    scopes: "profile email shopping"
    scopeValidationCriteria: "AND"
    maxCacheEntries: 1000
----

include::partial$policy-title-headers.adoc[tag=ui]

[%header%autowidth.spread,cols="25a,45a,30a"]
|===
| Element | Description | Example

| Introspection URL
| Full URL of the third-party token introspection endpoint.
| `https://my-idp.example.com/oauth2/introspect`

| Authorization Value
| Value for the `Authorization` header when calling the introspection endpoint, including the scheme (for example, `Basic` or `Bearer`).
| `Basic am9obkBleGFtcGxlLmNvbTphYmMxMjM=`

| Validated Token TTL
| Maximum time, in seconds, to reuse a successfully validated token from the cache before introspecting again.
| `600`

| Authentication Request Timeout
| Maximum time, in milliseconds, to wait for a response from the introspection endpoint.
| `10000`

| Skip Client ID Validation
| When selected, skips verifying that the client ID from the introspection response matches a client application authorized for the API. When selected, *Consumer By* is not shown and defaults to `client_id`.
|

| Consumer By
| Shown when *Skip Client ID Validation* is not selected. Indicates which field from the introspection response to treat as the client identifier (`username`, `client_id`, or another root-level field).
| `client_id`

| Expose Headers
| In a proxy scenario, whether to forward introspection user properties to the upstream as request headers prefixed with `X-AGW-`.
|

| Scopes
| Space-separated list of scopes the token must satisfy (according to *Scope Validation Criteria*).
| `profile email shopping`

| Scope Validation Criteria
| Whether the token must include all listed scopes or any one of them. Options are *Contains all scopes* (`AND`) or *Contains any scope* (`OR`).
| *Contains all scopes*

| Maximum Cache Entries
| Upper bound on the number of validated tokens kept in the cache.
| `1000`

| Enable Protected Resource Metadata
| Enables https://www.rfc-editor.org/rfc/rfc9728[RFC 9728] OAuth 2.0 Protected Resource Metadata. When selected, Flex Gateway serves the metadata document at `/.well-known/oauth-protected-resource` on the API path (the request does not go upstream), and `401` responses include a `WWW-Authenticate` header with a `resource_metadata` hint for clients such as MCP. When cleared, *Override Protected Resource Metadata Authorization Server URL* and *Protected Resource Metadata Authorization Server URL* are not shown.
|

| Override Protected Resource Metadata Authorization Server URL
| Shown when *Enable Protected Resource Metadata* is selected. When selected, you must set *Protected Resource Metadata Authorization Server URL*. When cleared, the authorization server URL advertised in metadata is derived from the introspection URL (`scheme://host:port`).
|

| Protected Resource Metadata Authorization Server URL
| Shown when *Override Protected Resource Metadata Authorization Server URL* is selected. Authorization server base URL to include in the protected resource metadata (for example, for Keycloak realms).
| `https://auth.example.com/realms/myrealm`

|===
